# improvisor

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: FindWdk.cmake
improvisor-drv/: CMakeLists.txt
improvisor-drv/cmake/: FindWdk.cmake
improvisor-drv/src/: detour.c  detour.h  ept.h  fmt.h  gdrv.c  gdrv.h  hash.c  hash.h  improvisor.c  improvisor.h  ldr.c  ldr.h  ll.c  ll.h  macro.h  main.c  map.c  map.h  section.h  spinlock.c  vmm.c  vmm.h  vmx.c  win.c  win.h
improvisor-drv/src/arch/: cpu.asm  cpu.h  cpuid.c  cpuid.h  cr.h  flags.h  interrupt.h  memory.h  mtrr.h  segment.h
improvisor-drv/src/mm/: mm.c  mm.h  vpte.c  vpte.h
improvisor-drv/src/os/: dbg.c  input.c  input.h  pe.c  pe.h
improvisor-drv/src/pdb/: pdb.c  pdb.h
improvisor-drv/src/vcpu/: interrupts.asm  interrupts.c  interrupts.h  tsc.c  vcpu.asm  vcpu.c  vcpu.h  vdr.c  vmcall.asm  vmcall.c  vmcall.h  vmexit.asm  vmexit.c  vmexit.h
improvisor-ldr/: CMakeLists.txt
improvisor-ldr/src/: capcom.c  hash.h  ldr.c  ldr.h  macro.h  main.c  pdb.c  pdb.h  pe.c  pe.h  str.c  str.h  vmcall.asm  vmcall.c  vmcall.h  win.h
src/: cpu.c  cpu.h  cpu_state.asm  cpuid.c  cpuid.h  detour.c  detour.h  ept.c  ept.h  hash.c  improvisor.c  improvisor.h  intrin.asm  intrin.h  ldasm.c  ldasm.h  ldr.c  ldr.h  macro.h  main.c  mm.c  mm.h  mtrr.c  mtrr.h  pdb.c  pdb.h  pe.c  pe.h  section.h  spinlock.c  spinlock.h  vcpu.c  vcpu.h  vmcall.asm  vmcall.c  vmcall.h  vmexit.asm  vmm.c  vmm.h  vmm_intr.asm  (+7 more)
src/arch/: cpu.asm  cpu.h  cpuid.c  cpuid.h  cr.h  dr.h  flags.h  interrupt.h  memory.h  msr.h  mtrr.c  mtrr.h  segment.c  segment.h
src/mm/: mm.c  mm.h  vpte.c  vpte.h
src/os/: dbg.c  dbg.h  pe.c  pe.h
src/pdb/: pdb.c  pdb.h
src/util/: fmt.c  fmt.h  hash.c  hash.h  macro.h  spinlock.c  spinlock.h
src/vcpu/: interrupts.asm  interrupts.c  interrupts.h  tsc.h  vcpu.asm  vcpu.c  vcpu.h  vdr.h  vmcall.c  vmcall.h  vmexit.asm  vmexit.c  vmexit.h
